configuration all apis added
