# models/dto/ping.go
@@ -1,0 +1,6 @@
+package dto
+
+type PingResponse struct {
+	StatusCode int `json:"statusCode"`
+	Message    any `json:"message"`
+}
