# utils/custom_errors.go
@@ -8,18 +8,18 @@ import (
 )
 
 type CustomError struct {
-	Code    int    `json:"code"`
-	Message string `json:"message"`
+	StatusCode int    `json:"statusCode"`
+	Message    string `json:"message"`
 }
 
 func (c *CustomError) Error() string {
-	return fmt.Sprintf("code:%d error:%s", c.Code, c.Message)
+	return fmt.Sprintf("code:%d error:%s", c.StatusCode, c.Message)
 }
 
 func NewCustomError(code int, message string) error {
 	return &CustomError{
-		Code:    code,
-		Message: message,
+		StatusCode: code,
+		Message:    message,
 	}
 }
 
@@ -29,15 +29,19 @@ func NewBadRequestError(message string) error {
 
 func NewInternalServerError(message string) error {
 	return &CustomError{
-		Code:    http.StatusInternalServerError,
-		Message: message,
+		StatusCode: http.StatusInternalServerError,
+		Message:    message,
 	}
 }
 
 func WriteError(ctx *gin.Context, err error) {
 	if cErr, ok := err.(*CustomError); ok {
-		ctx.JSON(cErr.Code, cErr)
+		ctx.JSON(cErr.StatusCode, cErr)
 		return
 	}
-	ctx.JSON(http.StatusInternalServerError, &CustomError{Code: http.StatusInternalServerError, Message: err.Error()})
+	ctx.JSON(http.StatusInternalServerError, &CustomError{StatusCode: http.StatusInternalServerError, Message: err.Error()})
+}
+
+func WriteResponse(ctx *gin.Context, res any) {
+	ctx.JSON(http.StatusOK, res)
 }
